	* R405: ADDED:
	  - implemented Insert special barline dialog
	  - if an element is selected, barline is inserted right after it. Otherwise, only the selected barline becomes the current item being placed when you first click on the score.
	  - added menu option Insert->Special barline...
	  - added shortcut key SHIFT+Key_Tab for this
	  - Escape key now unselects the current active sign to be placed (e.g. barline)
	  - Home/End keys hit multiple times select the first/last element
	  - Home/End keys goes to the last X pos of the current staff
	  - some other minor fixes and additions
	* R406: FIXED: Crash, when canceling the selection in special barline dialog.
	* R407: FIXED: Shortcut keys for setting the pitch (C,D,E,F, etc.) changed from Key_C to SHIFT+Key_C (capitalized C) and so on for the others, so there's no collision with Key_E for Edit mode when in non-caps-locked mode.
	* R410: Updated bksys files to new scons version 0.96.91
	* R411: Scons: Replaced kde.py by kde3.py. Added a missing function for KDEprogram
	* R413: unix scons files
	* R414: osx scons files
	* R415: win32 scons files
	* R416: Scons: Added check for existing cache files
	* R417: Updated scons minimum environment to 0.96.91
	* R418: lowlevel scons file
	* R423: Changed toolpath to scons_admin, bksys link no longer needed
	* R421: Updated SConstruct file to new scons version
	* R420: Simplified sconscript with new scons version
	* R424: Added translation sconscript required by new scons/bksys version
	* R426: Added printing icon ("fileprint") and preview icon ("frameprint")
	* R434: FIXED: compilation warnings for lo48 and lo64 icons
	* R435: Updated NEWS. Updated Slovenian and other translations.
	* R439: Enable print support by default in configure
	* R441: In lilypond export korrect syntax for alternatives in repeats
	* R444: ADDED: Portuguese translation thanks to Denis A. Altoe Falqueto.