@@ -256,7 +256,4 @@
     </image>
 </images>
 <layoutdefaults spacing="6" margin="11"/>
-<includehints>
-    <includehint>nscaleedit.h</includehint>
-</includehints>
 </UI>
