@@ -356,8 +356,4 @@
     <slot>slot_68()</slot>
 </slots>
 <layoutdefaults spacing="6" margin="11"/>
-<includehints>
-    <includehint>nscaleedit.h</includehint>
-    <includehint>nscaleedit.h</includehint>
-</includehints>
 </UI>
